# beer

./: .gitignore  CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py
include/: beer.hpp
src/: CMakeLists.txt  beer.cpp  main.cpp
tests/: CMakeLists.txt  beer_test.cpp  main_test.cpp
